# Discord-Bot-Database

./: .env.example  .gitignore  DISCORDBOT_PROMPT.md  docker-compose.yml  pyproject.toml
.github/workflows/: linting.yml
src/discordbot/: Dockerfile  discord_bots.db  main.py
src/discordbot/cogs/: log.py  registry.py
src/discordbot/libs/: config.py  database.py  models.py  origin_handler.py  service.py  storage.py  views.py
src/webapi/: __init__.py  app.py
